[package]
name = "swiss"
version = "0.1.0"
edition = "2021"

[dependencies]
atty = "0.2.14"
clap = { version = "4.5.13", features = ["derive"] }
const_format = "0.2.31"
either = "1.13.0"
paste = "1.0.15"
phf = { version = "0.11.2", features = ["macros"] }
rug = "1.25"
rustyline = { version = "14.0.0", features = ["derive"] }
smallvec = "1.13.2"
static_init = "1.0.3"
unicode-xid = "0.2.4"
ustr = "1.0.0"
